# app-localtest

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.yml  findings.md  global.json  loadtest.sh  package-lock.json  package.json  podman-compose.monitoring.yml  podman-compose.yml  test.sh
.github/workflows/: localtest-pr.yml
infra/: grafana-datasources.yaml  otel-collector.yaml  tempo.yaml
infra/grafana-dashboards/: app.json
k6/: loadtest.sample.js
loadbalancer/templates/: nginx.conf.conf
pdf-go/: .dockerignore  Dockerfile  go.mod  go.sum
pdf-go/cmd/: main.go
pdf-go/internal/chromedp/: generator.go
pdf-go/internal/custom/: cdp.go  concurrent_map.go  generator.go
pdf-go/internal/fetcher/: fetcher.go
pdf-rust/: .dockerignore  Cargo.toml  Dockerfile
pdf-rust/src/: main.rs  pdf.rs
pdf-rust/src/internal/: fetcher.rs  mod.rs
pdf-rust/src/internal/chromiumoxide/: generator.rs  mod.rs
scripts/: run.ps1  run.sh
src/: LocalTest.csproj  Startup.cs  appsettings.Docker.json  appsettings.Podman.json  appsettings.json
src/Configuration/: GeneralSettings.cs  LocalPlatformSettings.cs
src/Controllers/: ApiVersionController.cs  DebugUsersController.cs  FrontendVersionController.cs  HomeController.cs  InfraController.cs  PDFPreviewController.cs  StorageExplorerController.cs  TenorUsersController.cs
src/Filters/: ProxyMiddleware.cs
src/Helpers/: CustomDateTimeConverter.cs
src/Models/: InstanceLock.cs  ServiceError.cs  TenorViewModel.cs
src/Notifications/: README.md
(+237 files in other folders)
