[package]
name = "pdf-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
async_zip = { version = "0.0.18", features = ["full"] }
num_cpus = "1.16"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.89"
futures = "0.3"
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
# spider_chrome = { version = "2", default-features = false }
base64 = "0.22.1"
crossbeam = "0.8.4"
async-channel = "2.5.0"
reqwest = { version = "0.12.23", features = ["stream"] }
tokio-util = "0.7.16"
sanitize-filename = "0.6.0"
